[gd_scene load_steps=14 format=3 uid="uid://bkhyaocomqp2q"]

[ext_resource type="Script" uid="uid://iud8b5qauag5" path="res://Main/Characters/Enemies/Cherubim/cherubim.gd" id="1_vrbru"]
[ext_resource type="PackedScene" uid="uid://br0pvgk7t0dyh" path="res://Main/Characters/Enemies/Cherubim/cherubim_bullet.tscn" id="2_yfmxc"]
[ext_resource type="ArrayMesh" uid="uid://fbn75aqihcfw" path="res://assets/models/enemies/cherub.obj" id="3_yfmxc"]
[ext_resource type="Script" uid="uid://v8gickpnd8q0" path="res://Main/Utility/Components/health_component.gd" id="3_yq8ut"]
[ext_resource type="Material" uid="uid://cv7l0r86mk435" path="res://assets/materials/hitflash_mat.tres" id="3_yvj4b"]
[ext_resource type="Script" uid="uid://cgpmhci7164s6" path="res://Main/Utility/Components/hitbox_component.gd" id="4_yvj4b"]
[ext_resource type="PackedScene" uid="uid://d183l837ka6ro" path="res://Main/Utility/Particles/stun_particles.tscn" id="7_wxbld"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vrbru"]
albedo_color = Color(0.831366, 0.191113, 0.0643092, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yvj4b"]
radius = 1.36237
height = 7.6612

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yq8ut"]
radius = 1.70323
height = 8.34714

[sub_resource type="SphereMesh" id="SphereMesh_yfmxc"]
radius = 0.25
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_yq8ut"]
radius = 0.25
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_yfmxc"]
radius = 50.0

[node name="Cherubim" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 4
script = ExtResource("1_vrbru")
bullet = ExtResource("2_yfmxc")
bullet_velocity_close = 2.0
bullet_gravity_close = -4.0
movement_speed = 2
vacuum_distance_goal = 4.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["Enemies"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vrbru")
material_overlay = ExtResource("3_yvj4b")
mesh = ExtResource("3_yfmxc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0.0270381, 0.840859, -0.362501)
shape = SubResource("CapsuleShape3D_yvj4b")

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 13
script = ExtResource("4_yvj4b")
metadata/_custom_type_script = "uid://cgpmhci7164s6"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0.0270381, 0.682748, -0.362501)
shape = SubResource("CapsuleShape3D_yq8ut")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_yq8ut")

[node name="PathfindTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="ShootPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24739, -2.27164)

[node name="Ishim1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ishim1"]
mesh = SubResource("SphereMesh_yfmxc")

[node name="Ishim2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ishim2"]
mesh = SubResource("SphereMesh_yq8ut")

[node name="IshimArea" type="Area3D" parent="." groups=["Enemies"]]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="IshimArea"]
shape = SubResource("SphereShape3D_yfmxc")

[node name="StunParticles" parent="." instance=ExtResource("7_wxbld")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34961, -3.7762)

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="body_entered" from="IshimArea" to="." method="_on_ishim_area_body_entered"]
